prevents small images from stretching

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -154,7 +154,8 @@ body {
 }
 
 img {
-  width: 100%;
+  width: auto;
+  max-width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
